--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
   </form>
 
   <script>
-    // 🔁 Paste your Firebase config here:
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT.firebaseapp.com",
-      databaseURL: "https://YOUR_PROJECT.firebaseio.com",
-      projectId: "YOUR_PROJECT",
-      storageBucket: "YOUR_PROJECT.appspot.com",
-      messagingSenderId: "YOUR_ID",
-      appId: "YOUR_APP_ID"
-    };
+  apiKey: "AIzaSyDP4W466FiYZevlqoTYz8cWSkIuBJYzcxE",
+  authDomain: "userinputdb.firebaseapp.com",
+  databaseURL: "https://userinputdb-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "userinputdb",
+  storageBucket: "userinputdb.firebasestorage.app",
+  messagingSenderId: "799953334775",
+  appId: "1:799953334775:web:c3f5dc1f9e90de73b9bef2"
+};
 
     // Initialize Firebase
     const app = firebase.initializeApp(firebaseConfig);
