--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
   authDomain: "userinputdb.firebaseapp.com",
   databaseURL: "https://userinputdb-default-rtdb.asia-southeast1.firebasedatabase.app",
   projectId: "userinputdb",
-  storageBucket: "userinputdb.firebasestorage.app",
+  storageBucket: "userinputdb.appspot.com", // ✅ Fixed this line
   messagingSenderId: "799953334775",
   appId: "1:799953334775:web:c3f5dc1f9e90de73b9bef2"
 };
+
 
     // Initialize Firebase
     const app = firebase.initializeApp(firebaseConfig);
