--- a/index.html
+++ b/index.html
@@ -2,47 +2,52 @@
 <html>
 <head>
   <title>Firebase Submission</title>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
-</head>
-<body>
-  <h2>Submit Your Info</h2>
-  <form id="dataForm">
-    <input type="text" id="nameInput" placeholder="Your name" required><br>
-    <input type="text" id="choiceInput" placeholder="Your choice" required><br>
-    <button type="submit">Submit</button>
-  </form>
+  <script type="module">
+    // Firebase v9+ Modular SDK Imports
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+    import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
-  <script>
+    // Your Firebase configuration
     const firebaseConfig = {
       apiKey: "AIzaSyDP4W466FiYZevlqoTYz8cWSkIuBJYzcxE",
       authDomain: "userinputdb.firebaseapp.com",
       databaseURL: "https://userinputdb-default-rtdb.asia-southeast1.firebasedatabase.app",
       projectId: "userinputdb",
-      storageBucket: "userinputdb.appspot.com",
+      storageBucket: "userinputdb.firebasestorage.app",
       messagingSenderId: "799953334775",
       appId: "1:799953334775:web:c3f5dc1f9e90de73b9bef2"
     };
 
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const database = getDatabase(app);
 
-    document.getElementById("dataForm").addEventListener("submit", function (e) {
-      e.preventDefault();
+    // Submit data
+    window.submitData = () => {
+      const name = document.getElementById("name").value;
+      const choice = document.getElementById("choice").value;
 
-      const name = document.getElementById("nameInput").value;
-      const choice = document.getElementById("choiceInput").value;
-
-      db.ref("submissions").push({
-        name: name,
-        choice: choice
-      }).then(() => {
-        alert("Data submitted!");
-        document.getElementById("dataForm").reset();
-      }).catch((error) => {
-        alert("Error: " + error.message);
+      const submissionsRef = ref(database, 'submissions');
+      push(submissionsRef, {
+        name,
+        choice
+      })
+      .then(() => {
+        alert("Data submitted successfully!");
+        document.getElementById("form").reset();
+      })
+      .catch((error) => {
+        console.error("Error:", error);
       });
-    });
+    };
   </script>
+</head>
+<body>
+  <h2>Submit Your Info</h2>
+  <form id="form" onsubmit="event.preventDefault(); submitData();">
+    <input type="text" id="name" placeholder="Enter your name" required><br><br>
+    <input type="text" id="choice" placeholder="Enter your choice" required><br><br>
+    <button type="submit">Submit</button>
+  </form>
 </body>
 </html>
