--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <input type="text" id="username" placeholder="Your name" required />
     <h3>Do You Like Me ?</h3>
     <select id="option">
+      <option value="YES">YES</option>
       <option value="NO">NO</option>
       <option value="NO">NO</option>
       <option value="NO">NO</option>
-      <option value="yes">YES</option>
     </select>
     <button type="submit">Submit</button>
   </form>
