--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <input type="text" id="username" placeholder="Your name" required />
     <h3>Do You Like Me ?</h3>
     <select id="option">
-      <option value="YES">YES</option>
-      <option value="NO">NO</option>
-      <option value="NO">NO</option>
-      <option value="NO">NO</option>
-    </select>
+  <option value="YES">YES</option>
+  <option value="NO 1">NO</option>
+  <option value="NO 2">NO</option>
+  <option value="NO 3">NO</option>
+</select>
     <button type="submit">Submit</button>
   </form>
 
