--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
       push(ref(db, "user_inputs"), data)
         .then(() => {
-          alert("✅ Data sent to Firebase!");
+          alert("✅ I LOVE YOU RINA!");
           document.querySelector("form").reset();
         })
         .catch((error) => {
