--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
   <form onsubmit="event.preventDefault(); submitData();">
     <h2>Hi I Am Deep<br>Please Answer The Questions</h2>
     <input type="text" id="username" placeholder="Your name" required />
-    <h3>Do You Like Me ?</h3>
+    <h3>Do You Love Me ?  or anyone</h3>
     <select id="option">
-      <option value="YES">YES</option>
+      <option value="NO">NO</option>
       <option value="YES 1">YES 1</option>
       <option value="YES 2">YES 2</option>
       <option value="YES 3">YES YES YES</option>
