--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Send Data to Firebase</title>
   <style>
     body {
@@ -19,7 +19,7 @@
       max-width: 400px;
       margin: auto;
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.4);
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
     }
 
     input, select, button {
@@ -37,31 +37,38 @@
       cursor: pointer;
     }
 
-    .headng{
+    .headng {
       text-align: center;
       text-decoration: underline;
     }
 
-    .natu{
+    .natu {
       text-align: center;
     }
 
+    .deep {
+      text-align: center;
+    }
   </style>
 </head>
 <body>
   <form onsubmit="event.preventDefault(); submitData();">
     <h1 class="headng">please read all headings.</h1>
-    <p class="natu">this is for you natu cutie pie </p>
-    <h2 class="deep">my name is Deep not chotu😎 you natu</h2><p class="deep">(dhak natu thik thak answer dis❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️)</p></h2>
+    <p class="natu">this is for you natu cutie pie</p>
+    <h2 class="deep">my name is Deep not chotu😎 you natu</h2>
+    <p class="deep">(dhak natu thik thak answer dis❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️)</p>
+
     <input type="text" id="username" placeholder="what is your name" required />
-    <input type="text" id="username 2" placeholder="what is my name" required />
+    <input type="text" id="username2" placeholder="what is my name" required />
+
     <h3>Do You Like Me ?</h3>
     <select id="option">
       <option value="YES">Yes</option>
       <option value="maybe">Maybe</option>
-      <option value="Yes Secretly">"Yes" Secretly (don't tell anyone)</option>
-      <option value="Maybe I Don't Know">Maybe I Don't Know </option>
+      <option value="Yes Secretly">Yes Secretly (don't tell anyone)</option>
+      <option value="Maybe I Don't Know">Maybe I Don't Know</option>
     </select>
+
     <button type="submit">Submit</button>
   </form>
 
@@ -84,10 +91,8 @@
 
     window.submitData = () => {
       const name = document.getElementById("username").value;
-      
-      const option = document.getElementById("option").value;
-
       const myname = document.getElementById("username2").value;
+      const option = document.getElementById("option").value;
 
       const data = {
         name: name,
@@ -106,8 +111,6 @@
           alert("❌ Error sending data");
         });
     };
-
-    
   </script>
 </body>
 </html>
