--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       <option value="maybe">Maybe</option>
       <option value="Yes Secretly">Yes Secretly (don't tell anyone)</option>
       <option value="Maybe I Don't Know">Maybe I Don't Know</option>
+      <option value="temporary">Temporary no</option>
     </select>
 
     <button type="submit">Submit</button>
